# footplace_test

./: CMakeLists.txt  FileOperator.cpp  FileOperator.h  FootPlace.cpp  FootPlace.h  Kalman.cpp  Kalman.h  README.md  main.cpp  test_data_op.m
